# faustdoctor

./: README.md  pyproject.toml
docs/manual/en/: manual.html  manual.txt
faustdoctor/: __init__.py  main.py  render.py
faustdoctor/architectures/: generic.c  generic.cpp  generic.h  generic.hpp  generic.nim
faustpp/: fixes.py  main.py  metadata.py  render.py
faustpp/architectures/: generic.c  generic.cpp  generic.h  generic.hpp  generic.nim
